--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Chanman.jpg" alt="Picture displayed"></td>
+      <td><img src="Images/Chanman.jpg" alt="Picture displayed"></td>
       <td><h1>Abijith</h1>
       <p><em>I just created <strong>this page</strong>.</em></p>
       <p>This is supposed to be a bio but I don't really have much to say about myself.I like videogames....wait can I say that?? <br />Yeah....I like videogames.<br> <strong>OMG</strong> this is so <em>cringe</em>.</p></td>
